# vector-indexer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bench  Readme.md  bench.yaml  docker-compose.bench.yml  docker-compose.yml
bench/: config.rs  dataset.rs  main.rs  metrics.rs  output.rs  workloads.rs
bench/faiss_bench_official/: __init__.py  bench_all_ivf.py  vector_indexer_adapter.py
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/vector_indexer_py/: __init__.py
bindings/python/src/: lib.rs
examples/: demo.rs
scripts/: run_faiss_bench.sh
src/: api.rs  ivf_index.rs  kmeans.rs  lib.rs  main.rs  shards.rs  utils.rs  vector_store.rs
src/kmeans/: kmeans.rs  mod.rs  vector_store.rs
tests/: api_tests.rs  integration_tests.rs  ivf_index_tests.rs  kmeans_tests.rs  shards_tests.rs
tests/test_utils/: mod.rs
