[package]
name = "vector_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
ndarray = {version = "0.15", features = ["serde"]}
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wide = "0.7"
bincode = { version = "2.0.1", features = ["serde"] }
zerocopy = { version = "0.8", features = ["derive"] }
memmap2 = "0.9"

[dev-dependencies]
criterion = "0.5"
serial_test = "3.0"
