[workspace]
members = [".", "bindings/python"]

[package]
name = "vector_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
ndarray = {version = "0.15", features = ["serde"]}
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wide = "0.7"
bincode = { version = "2.0.1", features = ["serde"] }
zerocopy = { version = "0.8", features = ["derive"] }
memmap2 = "0.9"
serde_yaml = "0.9"
libc = "0.2"
tokio-uring = "0.5.0"
futures = "0.3.31"

[dev-dependencies]
serial_test = "3.0"

[features]
# Dev-only feature to expose internal modules to this repo's integration tests.
# Normal crate users will not enable this, so internals stay inaccessible by default.
internal_tests = []

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["internal_tests"]

[[test]]
name = "ivf_index_tests"
path = "tests/ivf_index_tests.rs"
required-features = ["internal_tests"]

[[test]]
name = "kmeans_tests"
path = "tests/kmeans_tests.rs"
required-features = ["internal_tests"]

[[test]]
name = "shards_tests"
path = "tests/shards_tests.rs"
required-features = ["internal_tests"]

[[bin]]
name = "bench"
path = "bench/main.rs"
required-features = ["internal_tests"]
