[package]
name = "vector_indexer_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "vector_indexer_py"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# The main vector_indexer crate
vector_indexer = { path = "../..", features = ["internal_tests"] }

# Async runtime and channels
tokio-uring = "0.5.0"
crossbeam-channel = "0.5"
once_cell = "1.19"

[build-dependencies]
pyo3-build-config = "0.22"

